handson-examples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: our-first-pod
  namespace: default
spec:
  containers:
  - name: service
    image: nginx
    ports:
      - containerPort: 80
