handson-examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: our-service
spec:
  type: ClusterIP
  selector:
    app: our-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
