handson-examples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: k8s.cno-user-XX-i-02.commandemy.training
    http:
      paths:
      - path: /
        backend:
          serviceName: our-service
          servicePort: 80
